--- a/config/database.yml
+++ b/config/database.yml
@@ -30,7 +30,7 @@ development:
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
   username: postgres
-  password: toantien030620
+  password: 15052000
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -57,7 +57,7 @@ test:
   <<: *default
   database: HotelManagementWeb_test
   username: postgres
-  password: toantien030620
+  password: 15052000
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
