--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "bulma": "^0.9.2",
+    "chart.js": "^3.2.1",
+    "chartkick": "^4.0.4",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
