--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,10 @@ default: &default
 development:
   <<: *default
   database: HotelManagementWeb_development_1
-
+  username: postgres
+  password: 1505
 test:
   <<: *default
   database: HotelManagementWeb_test_1
+  username: postgres
+  password: 1505
