--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "bootstrap": "^5.0.1",
+    "bs-stepper": "^1.7.0",
     "bulma": "^0.9.2",
     "chart.js": "^3.2.1",
     "chartkick": "^4.0.4",
